<resources>
    <string name="app_name">Resume Builder</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="enter">Enter</string>
    <string name="vacancy">Vacancy</string>
    <string name="salary">Salary</string>
    <string name="save">Save</string>
    <string name="cv_head">- CURRICULUM VITAE -</string>
    <string name="your_photo">Your photo</string>
    <string name="info">Some info</string>
    <string name="cv_photo">Your photo</string>
    <string name="cv_back">CV background</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="hh_client_id">IRAVPJKQKUVASEL928F23TMFBFRKKINP50S1KK8L72T7DL3JUTRETN2V54OIL628</string>
    <string name="hh_client_secret">PIRMKLVMBUA1EUF3VKCCF02BETTBSR7OS7OF44QIUPA2QKG34TCOOU8EK74CGO2V</string>
    <string name="or">- or -</string>
    <string name="head_hunter">HeadHunter</string>
    <string name="rabota">Rabota.ua</string>
</resources>
